Update build bits and pieces and fix tests
Signed-off-by: Jon Ludlam <jonathan.ludlam@citrix.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,7 @@ OCAMLC = ocamlfind ocamlc
 OCAMLOPT = ocamlfind ocamlopt
 OCAMLFLAGS = -annot -g
 
-PACKS = rpclib,lwt,lwt.unix
+PACKS = rpclib,lwt,lwt.unix,rpclib.json
 EXAMPLES = \
 	all_types \
 	phantom \
