Add Lwt and Async modules
Signed-off-by: Jon Ludlam <jonathan.ludlam@citrix.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,7 @@ OCAMLC = ocamlfind ocamlc
 OCAMLOPT = ocamlfind ocamlopt
 OCAMLFLAGS = -annot -g
 
-PACKS = rpclib,lwt,lwt.unix,rpclib.json
+PACKS = rpclib,rpclib.json,ppx_deriving_rpc,unix
 EXAMPLES = \
 	all_types \
 	phantom \
@@ -13,7 +13,10 @@ EXAMPLES = \
 	dict \
 	variants \
 	client \
-	client_lwt
+	client_lwt \
+	client_lwt_new \
+	client_async_new
+
 
 EXECS=$(foreach example, $(EXAMPLES), $(example).opt)
 
@@ -28,12 +31,28 @@ client.opt: idl_test.cmx idl_test.cmi client.cmx
 	$(OCAMLOPT) -linkpkg -package $(PACKS) -o $@ idl_test.cmx client.cmx
 
 client_lwt.opt: idl_test.cmx idl_test.cmi client_lwt.cmx
-	$(OCAMLOPT) -linkpkg -package $(PACKS) -o $@ idl_test.cmx client_lwt.cmx
+	$(OCAMLOPT) -linkpkg -package $(PACKS),lwt,lwt.unix,rpclib.lwt -o $@ idl_test.cmx client_lwt.cmx
+
 idl_test.cmx: idl_test.ml idl_test.cmi
 	$(OCAMLOPT) -package $(PACKS),rpclib.idl -syntax camlp4o -c -o $@ $<
 
+client_lwt_new.opt: client_lwt_new.cmx
+	$(OCAMLOPT) -linkpkg -package $(PACKS),lwt,lwt.unix,rpclib.lwt -o $@ client_lwt_new.cmx
+
+client_async_new.opt: client_async_new.cmx
+	$(OCAMLOPT) -linkpkg -thread -package $(PACKS),rpclib.async -o $@ client_async_new.cmx
+
 %.opt: %.cmx
 	$(OCAMLOPT) -linkpkg -package $(PACKS) -o $@ $<
+
+client_lwt.cmx: client_lwt.ml
+	$(OCAMLOPT) $(OCAMLFLAGS) -package $(PACKS),lwt,lwt.unix,rpclib.lwt -c -o $@ $<
+
+client_lwt_new.cmx: client_lwt_new.ml
+	$(OCAMLOPT) $(OCAMLFLAGS) -package $(PACKS),lwt,lwt.unix,rpclib.lwt -c -o $@ $<
+
+client_async_new.cmx: client_async_new.ml
+	$(OCAMLOPT) $(OCAMLFLAGS) -package threads,$(PACKS),async -thread -c -o $@ $<
 
 %.cmx: %.ml
 	$(OCAMLOPT) $(OCAMLFLAGS) -package $(PACKS),rpclib.syntax -syntax camlp4o -c -o $@ $<
