Separate lib, ppx and camlp4, and port to jbuilder
Signed-off-by: Marcello Seri <marcello.seri@citrix.com>

--- a/rpclib-camlp4.opam
+++ b/rpclib-camlp4.opam
@@ -12,11 +12,8 @@ build: [["jbuilder" "build" "--only-packages" "rpclib" "--root" "." "-j" jobs "@
 depends: [
   "jbuilder"  {build}
   "ocamlfind" {build}
-  "async"
-  "cmdliner"
-  "cow"
-  "lwt"
-  "rresult"
-  "xmlm"
+  "camlp4"
+  "result"
+  "type_conv"
+  "rpclib"
 ]
-depopts: [ "js_of_ocaml" ]
