--- a/ppx_deriving_rpc.opam
+++ b/ppx_deriving_rpc.opam
@@ -8,15 +8,9 @@ tags: [
   "org:mirage"
   "org:xapi-project"
 ]
-build: [["jbuilder" "build" "--only-packages" "rpclib" "--root" "." "-j" jobs "@install"]]
+build: [["jbuilder" "build" "--only-packages" "ppx_deriving_rpc" "--root" "." "-j" jobs "@install"]]
 depends: [
   "jbuilder"  {build}
   "ocamlfind" {build}
-  "async"
-  "cmdliner"
-  "cow"
-  "lwt"
-  "rresult"
-  "xmlm"
+  "rpclib"
 ]
-depopts: [ "js_of_ocaml" ]
