use current js_of_ocaml for js/
Signed-off-by: Marcello Seri <marcello.seri@citrix.com>

--- a/rpclib.opam
+++ b/rpclib.opam
@@ -19,4 +19,10 @@ depends: [
   "rresult"
   "xmlm"
 ]
-depopts: [ "js_of_ocaml" ]
+depopts: [
+  "js_of_ocaml"
+  "ppx_driver"
+  "ppx_jane"
+]
+
+
