--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-*.opt
-*.o
-*.cmi
-*.cmx
-*.cma
-*.cmxa
-*.cmo
-*.annot
-*~
-_build
-idl_test_gen.ml
+_build/
+.merlin
+*.install
 *.gen.ml
-*.mldylib
-*.mllib
-lib/META
-setup.data
-setup.log
-ppx_test/test
-ppx_test/tytest
+*.annot
+*.cmx
+*.cmi
+*.cmo
+*.cmxa
+*.o
+*.opt
 
+example/vm.md
 example/example.ml
 example/example
 example/example2
