--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ script: bash -ex .travis-docker.sh
 env:
     global:
         - DISTRO=debian-unstable
-        - PACKAGE=rpc
+        - PINS="rpclib:. rpclib-camlp4:. ppx_deriving_rpc:."
+        - PACKAGE="ppx_deriving_rpc"
     matrix:
         - OCAML_VERSION=4.02.3
         - OCAML_VERSION=4.03.0
