Refactor build and build-test
Signed-off-by: Marcello Seri <marcello.seri@citrix.com>

--- a/rpc.opam
+++ b/rpc.opam
@@ -8,6 +8,10 @@ tags: [
   "org:mirage"
   "org:xapi-project"
 ]
+build-test: [
+    ["jbuilder" "build"]
+    ["jbuilder" "runtest" "-j" jobs]
+]
 depends: [
   "rpclib"
   "rpclib-camlp4"
