--- a/ppx_deriving_rpc.opam
+++ b/ppx_deriving_rpc.opam
@@ -8,7 +8,8 @@ tags: [
   "org:mirage"
   "org:xapi-project"
 ]
-build: [["jbuilder" "build" "--only-packages" "ppx_deriving_rpc" "--root" "." "-j" jobs "@install"]]
+build: [["jbuilder" "build" "-p" name "-j" jobs]]
+build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
 depends: [
   "jbuilder"  {build}
   "rpclib"
