--- a/rpclib-camlp4.opam
+++ b/rpclib-camlp4.opam
@@ -8,7 +8,7 @@ tags: [
   "org:mirage"
   "org:xapi-project"
 ]
-build: [["jbuilder" "build" "--only-packages" "rpclib" "--root" "." "-j" jobs "@install"]]
+build: [["jbuilder" "build" "-p" name "-j" jobs]]
 depends: [
   "jbuilder"  {build}
   "camlp4"
