--- a/rpc.opam
+++ b/rpc.opam
@@ -10,7 +10,7 @@ tags: [
 ]
 build-test: [
     ["jbuilder" "build"]
-    ["jbuilder" "runtest" -p "name"]
+    ["jbuilder" "runtest" "-p" name]
 ]
 depends: [
   "rpclib"
