Reorganize tests to run with jbuilder
The camlp4 test are still using the old-style Makefile but I think it is a reasonable compromise

Signed-off-by: Marcello Seri <marcello.seri@citrix.com>

--- a/rpclib-camlp4.opam
+++ b/rpclib-camlp4.opam
@@ -9,6 +9,9 @@ tags: [
   "org:xapi-project"
 ]
 build: [["jbuilder" "build" "-p" name "-j" jobs]]
+build-test: [
+    ["jbuilder" "runtest" "-p" name]
+]
 depends: [
   "jbuilder"  {build}
   "camlp4"
