--- a/rpc.opam
+++ b/rpc.opam
@@ -5,18 +5,19 @@ homepage: "https://github.com/mirage/ocaml-rpc"
 bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
 dev-repo: "git://github.com/mirage/ocaml-rpc"
 tags: [
-  "org:mirage"
-  "org:xapi-project"
+    "org:mirage"
+    "org:xapi-project"
 ]
 build-test: [
     ["jbuilder" "runtest" "-p" name]
 ]
 depends: [
-  "rpclib"
-  "rpclib-camlp4"
-  "ppx_deriving_rpc"
-  "async" {< "v0.10.0"}
-  "cow"
-  "lwt"
+    "jbuilder" {build}
+    "rpclib"
+    "rpclib-camlp4"
+    "ppx_deriving_rpc"
+    "async" {>= "v0.10.0" & <= "v0.11.0"}
+    "cow"
+    "lwt"
 ]
-
+conflicts: [ "core" {< "v0.9.0"} ]
