--- a/rpclib.opam
+++ b/rpclib.opam
@@ -18,10 +18,10 @@ depends: [
   "ppx_deriving_rpc" {test}
 ]
 depopts: [
-  "async" {< "v0.10.0"}
+  "async" {>= "v0.10.0" & < "v0.11.0"}
   "cow"
   "js_of_ocaml" {<= "2.8.4"}
   "lwt"
 ]
-
+conflicts: [ "core" {< "v0.9.0"} ]
 
