--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ env:
     matrix:
         - OCAML_VERSION=4.03.0
         - OCAML_VERSION=4.04.2
+        - PACKAGE="rpclib" OCAML_VERSION=4.04.2
+        - PACKAGE="rpclib-camlp4" OCAML_VERSION=4.04.2
+        - PACKAGE="ppx_deriving_rpc" OCAML_VERSION=4.04.2
         - OCAML_VERSION=4.05.0
         - OCAML_VERSION=4.06.0
 matrix:
