--- a/rpclib.opam
+++ b/rpclib.opam
@@ -18,10 +18,16 @@ depends: [
   "ppx_deriving_rpc" {test}
 ]
 depopts: [
-  "async" {>= "v0.9.0" & < "v0.11.0"}
+  "async"
   "cow"
-  "js_of_ocaml" {<= "2.8.4"}
+  "js_of_ocaml"
   "lwt"
 ]
-conflicts: [ "core" {< "v0.9.0"} ]
+conflicts: [
+    "core"  {< "v0.9.0"}
+    "async" {< "v0.9.0"}
+    "js_of_ocaml" {>= "3.0.0"}
+]
+
+
 available: [ ocaml-version >= "4.03.0" ]
