remove cppo where possible and update dependencies
Signed-off-by: Marcello Seri <marcello.seri@citrix.com>

--- a/ppx_deriving_rpc.opam
+++ b/ppx_deriving_rpc.opam
@@ -12,6 +12,7 @@ build: [["jbuilder" "build" "-p" name "-j" jobs]]
 build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
 depends: [
   "jbuilder"  {build}
+  "cppo"      {build}
   "rpclib"
   "ppx_deriving"
   "ppx_tools"
