ppx_deriving_rpc: update dependencies
Signed-off-by: Marcello Seri <marcello.seri@citrix.com>

--- a/ppx_deriving_rpc.opam
+++ b/ppx_deriving_rpc.opam
@@ -14,8 +14,10 @@ depends: [
   "jbuilder"  {build}
   "cppo"      {build}
   "rpclib"
+  "rresult"
   "ppx_deriving"
   "ppx_tools"
   "ppxfind"
+  "lwt" {test}
 ]
 available: [ ocaml-version >= "4.03.0" ]
